Fix text-decoration flickering on Chrome

--- a/home/static/css/home.css
+++ b/home/static/css/home.css
@@ -47,16 +47,15 @@ h4 {
 }
 
 #text-anim:before {
-    content: 'autônomos';
+    content: "autônomos";
     animation-name: head;
     animation-duration: 6s;
     animation-iteration-count: infinite;
 }
 
 @keyframes head {
-    0% {font-size:100%; opacity:1;}
-    20% {font-size:100%; opacity:1; content: "autônomos"}
-    60% {font-size:100%; opacity:1; content: "elétricos"}
+    20% {content: "autônomos"}
+    60% {content: "elétricos"}
 }
 
 #h2-index {
